# bedrock-llm-comparison

./: .env.example  .gitignore  HowToRun.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/agents/: __init__.py  chairman_agent.py  generator_agent.py  multi_agent_evaluator.py  multi_agent_rag.py  research_agent.py  reviewer_agent.py  templates.py
app/core/: bedrock_client.py  openai_client.py  unified_bedrock_client.py
app/models/: validation_schema.py
app/services/: comparison_service.py  export_service.py  high_recall_retriever.py  pdf_processor.py  pinecone_store.py  reranker.py  rule_extractor.py  vector_store.py  vector_store_pinecone.py
app/utils/: logger.py  text_processor.py
archive/: medical_rag_system.py
archive/outputs/embedding_comparison/: biobert_evaluation.txt  medcpt_evaluation.txt  (+4 more)
archive/scripts/: benchmark_vector_stores.py  compare_embeddings.py  compare_embeddings_hybrid.py  compare_faiss_pinecone.py  demo_for_sme.py  demo_reranking.py  find_violations.py  run_gap_analysis.py  run_medical_query.py  run_single_prompt.py  sources.txt  test_gap_analysis.py  test_gap_analysis_rag.py  test_high_recall.py  test_high_recall_simple.py  test_medcpt.py  test_reranking.py  test_reranking_impact.py  test_unified_bedrock_client.py
config/: models.yaml  settings.py
docs/: high_recall_integration.md
scripts/: analyze_protocol_gaps.py  extract_rules_to_json.py  index_rules_to_pinecone.py  process_pdfs.py  rebuild_index.py  run_all_models.py  run_batch_comparison.py  run_multi_agent_rag.py  test_deepseek.py
(+15 files in other folders)
